--- a/app.yaml
+++ b/app.yaml
@@ -9,5 +9,11 @@ handlers:
   script: ae_hello_django.wsgi.application
 
 libraries:
+- name: lxml
+  version: "latest"
 - name: MySQLdb
-  version: 1.2.5
+  version: "latest"
+- name: PIL
+  version: "1.1.7"
+- name: ssl
+  version: latest
