--- a/home.yaml
+++ b/home.yaml
@@ -5,7 +5,7 @@ service: home
 
 handlers:
 - url: /static/
-  static_dir: static/
+  static_dir: staticfiles/
 - url: .*  # This regex directs all routes to main.app
   script: home.wsgi.application
 - url: /_ah/queue/deferred
@@ -28,4 +28,4 @@ builtins:
 
 
 env_variables:
-  DJANGO_SETTINGS_MODULE: 'ae_hello_django.settings'
+  DJANGO_SETTINGS_MODULE: 'home.settings'
